# pam_2FAstack

./: .gitignore  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  pam_2fastack.c  pam_success.c
